--- a/styles/main.css
+++ b/styles/main.css
@@ -3,21 +3,31 @@
 .header {
         padding: 28px;
         text-align: center;
-        background-color: mediumpurple;
-        color: white;
+        background-color: #fcccf6;
+        color: #666666;
         font-size: 20px;
       }
 
 .head-options {
-    color: whitesmoke;
+    color:#939292;
     text-align: center;
-    padding: 30px;
+    padding: 27px;
     text-decoration: none;
-    font-size: 18px; 
+    font-size: 20px; 
     line-height: 25px;
     border-radius: 4px;
-    background-color: mediumpurple;}
+    background-color:#fcccf6;}
 
 body {
-    background-image: url(https://66.media.tumblr.com/5f271af569c4ffae7fda1a5c5ec61076/tumblr_o0rxw4AfPA1v0gyw0o1_1280.jpg);
-    background-repeat: repeat-x;}
+   /* background-image: url(https://66.media.tumblr.com/5f271af569c4ffae7fda1a5c5ec61076/tumblr_o0rxw4AfPA1v0gyw0o1_1280.jpg);*/
+    background-image: url(https://66.media.tumblr.com/1c244ec3acf4681fb876cde6e5cd405b/tumblr_muwf9vvgJ11s9oh9eo1_r1_1280.jpg);
+    background-repeat: repeat-x;
+    font-family: 'Amatic SC', cursive;}
+
+.text-box {
+    text-align: center;
+    margin:auto; 
+    padding: 100px;
+    font-size: 80px;
+    color: whitesmoke;
+}
