--- a/styles/main.css
+++ b/styles/main.css
@@ -31,3 +31,19 @@ body {
     font-size: 80px;
     color: whitesmoke;
     }
+
+
+.column {
+    float: left;
+    width: 32.5%;
+    padding: 5px;
+  }
+  
+  
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+ 
