fix dog photos formatting

--- a/styles/main.css
+++ b/styles/main.css
@@ -40,10 +40,10 @@ body {
   }
   
   
-  .row::after {
+  /*.row::after {
     content: "";
     clear: both;
     display: table;
-  }
+  }*/
 
  
