--- a/styles/main.css
+++ b/styles/main.css
@@ -70,7 +70,7 @@ body {
 	width:75%;
 	margin-left: auto ;
     margin-right: auto ;
-    height: 1000px;
+    height: 1250px;
     background-color: #d3d3ffd0;
     border-radius: 2%;
     
@@ -90,4 +90,10 @@ body {
 
 .blog-image {
     align-content: center;
+}
+
+#this {
+    border-color:red green blue yellow ;
+    border-style: dotted dashed solid double;
+    border-width: 10%;
 }
