--- a/styles/main.css
+++ b/styles/main.css
@@ -70,7 +70,7 @@ body {
 	width:65%;
 	margin-left: auto ;
     margin-right: auto ;
-    height: 1250px;
+    height: 1450px;
     background-color: #d3d3ffd0;
     border-radius: 2%;
     
@@ -97,3 +97,6 @@ body {
     border-style: dotted dashed solid double;
     border-width: 10%;
 }
+
+/* testing area begins */
+
